# uv-project-template

./: README.md  cookiecutter.json
.github/: pull_request_template.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: blank.md
